<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.usuario.radiobutton.MainActivity">

    <TextView
        android:id="@+id/txv_typeclient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/txv_TypeClient"
        android:layout_marginStart="8dp" />

    <RadioGroup
        android:id="@+id/rdg_Grupo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_typeclient">

        <RadioButton
            android:id="@+id/rdb_Particular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="91dp"
            tools:layout_editor_absoluteY="64dp"
            android:text="@string/rdb_Particular" />

        <RadioButton
            android:id="@+id/rdb_Bussiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="48dp"
            android:text="@string/rbd_Bussiness" />

    </RadioGroup>

    <include
        android:id="@+id/inc_particular"
        layout="@layout/layout_particular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdg_Grupo1" />

    <include
        android:id="@+id/inc_bussiness"
        layout="@layout/layout_bussinnes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdg_Grupo1" />
</android.support.constraint.ConstraintLayout>
